--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,6 @@ module = [
 ]
 ignore_missing_imports = true
 
-# code is currently formatted with default isort config
-#[tool.isort]
-#line_length = 99
-#py_version = 37
-
 [tool.autopep8]
 max_line_length = 99
 in-place = true
@@ -56,7 +51,7 @@ select = [
     "E",  # pycodestyle
     "W",  # pycodestyle
 #    "C90",  # mccabe
-#    "I",  # isort
+    "I",  # isort
 #    "N",  # pep8-naming
 #    "UP",  # pyupgrade
     "B",  # flake8-bugbear
@@ -113,3 +108,6 @@ ignore = [
 
 [tool.ruff.per-file-ignores]
 "tmt/steps/report/polarion.py" = ["DTZ005"]
+
+[tool.ruff.isort]
+known-first-party = ["tmt"]
