Enable flyt checks
Enables FLY002 (static-join-to-f-string) rule.
Compliments UP031, UP032 rules.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ select = [
     "PLR1",
 #    "PLW",  # pylint-warning
 #    "TRY",  # tryceratops
+    "FLY",  # flynt
     "RUF",  # ruff
 ]
 ignore = [
