--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ select = [
     "YTT",  # flake8-2020
 #    "ANN",  # flake8-annotations
 #    "S",  # flake8-bandit
-#    "ISC",  # flake8-implicit-str-concat
+    "ISC",  # flake8-implicit-str-concat
     "PT",   # flake8-pytest-style
     "RET",  # flake8-return
     "SIM",  # flake8-simplify
