Enable PERF checks
Currently only includes PERF102, which checks for uses of dict.items() that discard either the key or the value when iterating over the dictionary.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ select = [
 #    "PLW",  # pylint-warning
 #    "TRY",  # tryceratops
     "FLY",  # flynt
+    "PERF",  # perflint
     "RUF",  # ruff
 ]
 ignore = [
