--- a/.packit.yaml
+++ b/.packit.yaml
@@ -11,19 +11,18 @@ upstream_project_url: https://github.com/teemtee/tmt
 issue_repository: https://github.com/teemtee/tmt
 
 actions:
-    post-upstream-clone:
-      - make bump2dev
-    create-archive:
-      - make tarball
-    get-current-version:
-      - make version
+  post-upstream-clone:
+    - make bump2dev
+  create-archive:
+    - make tarball
+  get-current-version:
+    - make version
 
 srpm_build_deps:
   - make
   - python3-docutils
 
 jobs:
-
   # Build pull requests
   - job: copr_build
     trigger: pull_request
@@ -44,34 +43,34 @@ jobs:
   # Test internal plugins
   - job: tests
     trigger: pull_request
-    identifier: "internal-plugins"
+    identifier: 'internal-plugins'
     targets:
       - fedora-latest-stable
     use_internal_tf: True
-    fmf_url: "https://gitlab.cee.redhat.com/baseos-qe/tmt.git"
+    fmf_url: 'https://gitlab.cee.redhat.com/baseos-qe/tmt.git'
     # Tag cloud resources for tmt
     tf_extra_params:
-        environments:
-          - settings:
-                provisioning:
-                    tags:
-                        BusinessUnit: tmt
+      environments:
+        - settings:
+            provisioning:
+              tags:
+                BusinessUnit: tmt
 
   # Test internal wow
   - job: tests
     trigger: pull_request
-    identifier: "internal-wow"
+    identifier: 'internal-wow'
     targets:
       - fedora-latest-stable
     use_internal_tf: True
-    fmf_url: "https://gitlab.cee.redhat.com/baseos-qe/integration_scripts.git"
-    tmt_plan: "/tmt/integration/plan"
+    fmf_url: 'https://gitlab.cee.redhat.com/baseos-qe/integration_scripts.git'
+    tmt_plan: '/tmt/integration/plan'
     tf_extra_params:
-        environments:
-          - settings:
-                provisioning:
-                    tags:
-                        BusinessUnit: tmt
+      environments:
+        - settings:
+            provisioning:
+              tags:
+                BusinessUnit: tmt
 
   # Build commits to main
   - job: copr_build
@@ -97,8 +96,8 @@ jobs:
 
   - job: koji_build
     trigger: commit
-    allowed_pr_authors: ["packit", "psss", "lzachar"]
-    allowed_committers: ["packit", "psss", "lzachar"]
+    allowed_pr_authors: ['packit', 'psss', 'lzachar']
+    allowed_committers: ['packit', 'psss', 'lzachar']
     dist_git_branches:
       - fedora-all
       - epel-8
