--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,11 @@
 # Config for building https://tmt.readthedocs.io/
 version: 2
 build:
-    os: ubuntu-22.04
-    tools:
-        python: "3"
+  os: ubuntu-22.04
+  tools:
+    python: '3'
 python:
-    install:
-      - method: pip
-        path: .
-        extra_requirements: [docs]
+  install:
+    - method: pip
+      path: .
+      extra_requirements: [docs]
