--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,12 @@ repos:
     rev: v1.32.0
     hooks:
       - id: yamllint
-        files: ^tmt/schemas/.*\.yaml
+        types:
+          - text
+        files: '\.(fmf|yaml)$'
+        exclude: '(tmt|tests)/.*'
+        args:
+          ['-d', '{extends: default, rules: {line-length: disable}}']
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.0.274
