Use prettier to format fmf, yaml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,11 @@ repos:
     hooks:
       - id: autopep8
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 'v4.4.0'
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.274
     hooks:
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-      - id: trailing-whitespace
+      - id: ruff
+        args: ['--fix', '--show-fixes']
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.3.0'
@@ -36,8 +35,17 @@ repos:
     rev: '0.23.1'
     hooks:
       - id: check-metaschema
-        name: 'Check JSON schemas validity'
         files: ^tmt/schemas/.*\.yaml
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: 'v3.0.0-alpha.9-for-vscode'
+    hooks:
+      - id: prettier
+        name: 'format fmf, yaml files'
+        types:
+          - text
+        files: '\.(fmf|yaml)$'
+        exclude: '(tmt|tests)/.*'
 
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.32.0
@@ -50,13 +58,12 @@ repos:
         args:
           ['-d', '{extends: default, rules: {line-length: disable}}']
 
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.274
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: 'v4.4.0'
     hooks:
-      - id: ruff
-        args:
-          - '--fix'
-          - '--show-fixes'
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: trailing-whitespace
 
   - repo: https://github.com/teemtee/tmt.git
     rev: 1.24.1
