Use `ruff-format`
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -149,6 +149,7 @@ repos:
         args:
           - '--fix'
           - '--show-fixes'
+      - id: ruff-format
 
   - repo: https://github.com/teemtee/tmt.git
     rev: 1.36.0
