--- a/.packit.yaml
+++ b/.packit.yaml
@@ -2,10 +2,10 @@ specfile_path: tmt.spec
 files_to_sync:
   - tmt.spec
   - .packit.yaml
-sync_changelog: true
 
 upstream_package_name: tmt
 downstream_package_name: tmt
+copy_upstream_release_description: True
 
 upstream_project_url: https://github.com/teemtee/tmt
 issue_repository: https://github.com/teemtee/tmt
