--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,8 @@
 # tmt-specific
-
 /tmp/
-docs/code/autodocs/*.rst
-docs/code/template-extensions.rst
-docs/plugins/discover.rst
-docs/plugins/execute.rst
-docs/plugins/finish.rst
-docs/plugins/prepare.rst
-docs/plugins/provision.rst
-docs/plugins/report.rst
-docs/plugins/prepare-feature.rst
-docs/plugins/test-checks.rst
-docs/plugins/hardware-matrix.rst
-docs/guide/test-runner-guest-compatibility-matrix.inc.rst
-docs/_build
-docs/spec
-docs/stories
-docs/_static/tmt-small.png
+
+# mkdocs
+site/
 
 # Python
 
